minijinja/tests/snapshots/test_templates__vm@loop_bad_unpacking.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "<ul>\n{% for a, b in seq %}\n  <li>{{ a }}: {{ b }}\n{% endfor %}\n</ul>"
info:
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/loop_bad_unpacking.txt
---
!!!ERROR!!!

Error {
    kind: CannotUnpack,
    detail: "value is not iterable",
    name: "loop_bad_unpacking.txt",
    line: 2,
}

cannot unpack: value is not iterable (in loop_bad_unpacking.txt:2)
--------------------------- loop_bad_unpacking.txt ----------------------------
   1 | <ul>
   2 > {% for a, b in seq %}
     i        ^^^^ cannot unpack
   3 |   <li>{{ a }}: {{ b }}
   4 | {% endfor %}
   5 | </ul>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    loop: Loop {
        len: Some(
            3,
        ),
        idx: 0,
        depth: 0,
    },
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------
